pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: rizbi-pod
  labels:
    project: dev
spec:
  containers:
    - name: nginx-containers
      image: nginx
      resources:
        requests:
          memory: "1G" #1 gigabyte
          cpu: 1
        limits:
          cpu: 2
          memory: "2G"
