Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pay-ingress
  namespace: critical-space
spec:
  rules:
  - http:
      paths:
      - backend:
         service:
          name: pay-service
          port:
           number: 8080
        path: /pay
        pathType: ImplementationSpecific
